force-app/main/default/objects/docutizexa__OutputSettings__c/docutizexa__OutputSettings__c.object-meta.xml
<CustomObject>
    <label>Output Setting</label>
    <nameField>
        <displayFormat>OS-{0000000000}</displayFormat>
        <label>OutputSettingNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>