force-app/main/default/objects/docutizexa__OutputSettings__c/fields/docutizexa__Description__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>