force-app/main/default/objects/docutizexa__OutputSettings__c/fields/docutizexa__OproartsKey__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OproartsKey__c</fullName>
    <label>OPROARTS Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>