force-app/main/default/objects/docutizexa__OutputSettings__c/fields/docutizexa__Setting__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Setting</label>
    <referenceTo>docutizexa__Report__c</referenceTo>
    <relationshipLabel>出力定義</relationshipLabel>
    <relationshipName>OutputSettings</relationshipName>
    <type>Lookup</type>
</CustomField>