force-app/main/default/objects/docutizexa__OutputSettings__c/listViews/docutizexa__All.listView-meta.xml
<ListView>
    <fullName>docutizexa__All</fullName>
    <columns>NAME</columns>
    <columns>docutizexa__Setting__c</columns>
    <columns>docutizexa__Description__c</columns>
    <columns>docutizexa__AdditionalParameters__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>